--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/papercpnpro?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=zerogon
 spring.datasource.password=dkansk123
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
