devtools 추가, jQuery 연동

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=dkansk123
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.thymeleaf.cache=false
